Improve service env handling, add API key regeneration
- Update .env formatting and variable order for clarity
- Enhance run-and-register.ps1 to robustly manage service environment variables and write as REG_MULTI_SZ
- Ensure both RETALIQ_ALLOWED_IPS and RETALIQ_API_KEY are always set in the registry
- Refactor setup.ps1 to reliably locate scripts and provide clearer error messages
- Add Regenerate-ApiKeyFlow to generate, apply, and restart service with a new API key
- Reorganize interactive menu and remove manual allowed IP append option

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-﻿RETALIQ_API_KEY=z5CcY96EMmin9W7MKT4EzoLU7wvCO7F9
-RETALIQ_ALLOWED_IPS=127.0.0.1,172.17.0.1,172.28.114.121
+﻿RETALIQ_ALLOWED_IPS=127.0.0.1,172.17.0.1,172.28.114.121
+RETALIQ_API_KEY=kX3Gy5z4q7xAsvUezEmUncFUBB7M5lNg
