Refactor .env and IP handling; add SetEnvFile, update .gitignore
- Add Get-IPHost to aggregate host, WSL, and Docker IPs for RETALIQ_ALLOWED_IPS
- Refactor setup.ps1 to centralize .env and service env updates via new SetEnvFile function
- Improve allowed IP detection and remove preference for existing .env values
- Update .gitignore to better handle publish/ and root files; add win-x86.zip and win-x64.zip
- Expand interactive menu to support API key regeneration and service update

--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,11 @@ publish/
 *.db
 *.pfx
 
+.env
+
 # Rider
 .idea/
 
 # Visual Studio Code
 .vscode/
 
-# Ignore build outputs but keep zipped archives
-build/
-!build/*.zip
-!build/**/*.zip
