--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-﻿RETALIQ_ALLOWED_IPS=127.0.0.1,172.17.0.1,172.28.114.121
-RETALIQ_API_KEY=kX3Gy5z4q7xAsvUezEmUncFUBB7M5lNg
+﻿RETALIQ_API_KEY=7Ogp375s6BCfbUrhMkSYA1CjUmx8-sJE
+RETALIQ_ALLOWED_IPS=127.0.0.1,172.28.112.1,192.168.56.1,192.168.137.1,192.168.5.1,169.254.208.148,169.254.42.169,169.254.231.163,10.65.15.81,172.28.114.121,172.17.0.1
